- Implemented optional contact data for team partner registration child